spacing issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -532,7 +532,7 @@ figure {
 #fh5co-work-section_2,
 #fh5co-blog-section,
 #fh5co-features {
-  padding: 250em 0;
+  padding: 10em 0;
 }
 @media screen and (max-width: 768px) {
   #fh5co-work-section,
